# oauth-bunker

./: .env.example  .gitignore  Cargo.toml  README.md  SPLIT-ARCHITECTURE.md  TUNNEL-SETUP.md
.github/workflows/: deploy-docs.yml
docs/: oauth-setup.md
docs-site/: admin-guide.html  architecture.html  configuration.html  deployment.html  getting-started.html  index.html  oauth-setup.html  troubleshooting.html
docs-site/css/: style.css
docs-site/js/: main.js  nav.js
docs/plans/: 2026-03-03-admin-identity-pool-design.md  2026-03-03-admin-identity-pool-implementation.md  2026-03-03-oauth-signer-design.md  2026-03-03-oauth-signer-implementation.md  2026-03-03-user-identity-assignments-design.md  2026-03-03-user-identity-assignments-implementation.md  2026-03-04-admin-auth-design.md  2026-03-04-admin-auth-implementation.md  2026-03-04-docs-site-design.md  2026-03-04-docs-site-implementation.md  2026-03-06-nostr-extension-login.md
src/: bunker.rs  config.rs  crypto.rs  db.rs  main.rs  oauth.rs  state.rs  static_files.rs  web.rs
web-ui/: index.html  package-lock.json  package.json
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/lib/: nostr-auth.ts  nostr-profiles.ts
web-ui/src/pages/: Admin.tsx  AuthPopup.tsx  Dashboard.tsx  Landing.tsx
