[package]
name = "oauth-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nostr
nostr-sdk = "0.44"
nostr-connect = "0.44"

# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Crypto
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# OAuth
oauth2 = "5.0"
reqwest = { version = "0.12", features = ["json"] }

# Embedded static files
rust-embed = "8.11"
axum-embed = "0.1"
mime_guess = "2"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
